--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ pymongo = "==3.7.2"
 flask = "*"
 dnspython = "*"
 nltk = "*"
+urllib3 = ">=1.24.2"
+Jinja2 = ">=2.10.1"
 
 [dev-packages]
 pylint = "*"
